# rust-service

./: Cargo.toml  Dockerfile  LICENSE  README.md  SETUP.md  run.sh  setup.sh  start.sh
src/: add_event.rs  get_events.rs  main.rs  routes.rs
src/app/: mod.rs
src/app/add_event/: add_event.rs  mod.rs
src/app/events/: events.rs  mod.rs
src/app/health/: health.rs  mod.rs
src/app/root/: mod.rs  root.rs
src/test/: curl-tests.sh
src/tests/: test-post.sh
