[package]
name = "rust_service"
version = "0.1.6"
authors = ["github.com/electronicsleep"]
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-web = "4.2.1"
serde = {version = "1.0.106", features = ["derive"]}
serde_json = "1.0.64"
mysql = "23.0.0"
chrono = "0.4"

[profile.dev]
opt-level = 0

[profile.release.package."*"]
codegen-units = 1
opt-level = 3

[profile.release]
opt-level = 3
lto = true
