[package]
name = "rust_service"
version = "0.1.8"
authors = ["github.com/electronicsleep"]
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
actix-rt = "1.0.0"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.64"
dotenv = "0.15.0"
mysql = "23.0.0"
r2d2 = "0.8.10"
r2d2_mysql = "24"
chrono = "0.4"

[profile.dev]
opt-level = 0

[profile.release.package."*"]
codegen-units = 1
opt-level = 3

[profile.release]
opt-level = 3
lto = true
